<resources>
    <string name="app_name">Marketim</string>

    <!-- Login UI -->
    <string name="ui_login_username_edittext">Kullanıcı Adı</string>
    <string name="ui_login_password_edittext">Parola</string>
    <string name="ui_login_login_button">GİRİŞ YAP</string>
    <string name="ui_login_remember_me_switch_text">Beni hatırla</string>
    <string name="ui_login_username_edittext_validate">Kullanıcı adı giriniz</string>
    <string name="ui_login_password_edittext_validate">Parola giriniz</string>
    <string name="ui_login_failed_error_text">Kullanıcı adı ve parola eşleşmiyor</string>

    <!-- Orders UI -->
    <string name="ui_orders_error_text">Siparişler yüklenemedi</string>
    <string name="ui_orders_logout_button_text">ÇIKIŞ YAP</string>
    <string name="ui_orders_my_order_button_text">SİPARİŞLERİM</string>
    <string name="ui_orders_logout_dialog_title">Çıkış Yap</string>
    <string name="ui_orders_logout_dialog_message">Uygulamadan çıkış yapmak istediğinize emin misiniz?</string>
    <string name="ui_orders_logout_dialog_positive_button_text">EVET</string>
    <string name="ui_orders_logout_dialog_negative_button_text">HAYIR</string>
</resources>
