<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/medium_padding">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/large_padding"
        android:src="@drawable/img_app_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_padding"
        android:layout_marginTop="@dimen/smallest_padding"
        android:text="@string/app_name"
        android:textSize="@dimen/very_large_text_size"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ui_login_username_edittext" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        app:startIconDrawable="@drawable/ic_lock_outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ui_login_password_edittext"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/switchRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/ui_login_remember_me_switch_text"
        android:thumbTextPadding="@dimen/small_padding" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_padding"
        android:background="@drawable/selector_blue_button"
        android:text="@string/ui_login_login_button"
        android:textColor="@color/dark_text_color" />

</LinearLayout>